[package]
name = "digraph123"
version = "1.0.0"
authors = ["Mattias Päivärinta <mattias.paivarinta@doxwork.com>"]

[dependencies]
clap = "2.2"
cpal = "0.2"
lazy_static = "0.1"
libc = "0.2"
ogg-sys = "0.0"
rand = "0.3"
regex = "0.1"
vorbis = { git = "https://github.com/mattias-p/vorbis-rs.git", branch="comments" }
